# spica_idea8on

./: REPORT_202601.md  test_output.txt
2601/: AGENTS.md
2601/auto-tdd-agent/: .gitignore  DEBUG_REPORT.md  ENV_SETUP.md  README.md  SKILL.md  debug_ipc_prompt.py  debug_parser.py  debug_tdd.py  debug_tdd_detailed.py  debug_tdd_no_llm.py  demo_agent_prompts.py  pyproject.toml  quick_test.py  run_ipc_tests.py  test_budget_parser.py  test_ipc_slot.py  verify_config.py
2601/auto-tdd-agent/data/scenarios/: s01_v01.json
2601/auto-tdd-agent/prompts/: slot_updater.yaml
2601/auto-tdd-agent/reports/: test_report_20260201_160244.md  test_report_20260201_160852.md
2601/auto-tdd-agent/src/: __init__.py  graph.py
2601/auto-tdd-agent/src/core/: __init__.py  config.py  env_config.py  state.py
2601/auto-tdd-agent/src/nodes/: __init__.py  process_node.py  question_node.py  router.py
2601/auto-tdd-agent/src/services/: __init__.py
2601/auto-tdd-agent/src/utils/: __init__.py  ipc_llm_server.py  llm_client.py  validator.py
2601/auto-tdd-agent/tests/: __init__.py  conftest.py
2601/auto-tdd-agent/tests/evaluation/: __init__.py  evaluator.py
2601/auto-tdd-agent/tests/infrastructure/: __init__.py  adapter.py  simulator.py  tdd_runner.py
2601/auto-tdd-agent/tests/integration/: __init__.py  test_graph_execution.py
2601/auto-tdd-agent/tests/unit/: __init__.py
auto-tdd-agent/: .env.example  IMPLEMENTATION.md  README.md  debug_tdd_full.py  debug_tdd_simple.py  run_ipc_tests.py  test_agent_live.py  test_regex.py  test_tdd_budget_debug.py
auto-tdd-agent/src/: agent.py
(+15 files in other folders)
